--- a/index.html.html
+++ b/index.html.html
@@ -74,6 +74,6 @@
     <h3>About Our Company</h3>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos repellendus nulla eaque maxime in eveniet aut, cumque reiciendis fugit voluptas saepe distinctio voluptatem excepturi quam rerum tempore debitis possimus? Aliquid adipisci dolorum doloribus voluptate doloremque sed libero dignissimos itaque cumque qui totam, nemo molestiae amet architecto dolore nihil ipsa facilis?</p>
   </section>
-  <a class="btn2" href="15_vh_vw_notes.html">Notes</a>
+  /*<a class="btn2" href="15_vh_vw_notes.html">Notes</a>*/
 </body>
 </html>
